fixed phone alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -209,10 +209,7 @@ text-area {
 .primary-menu:hover {
   background-color: #ff4050 !important;
 }
-input[type="tel"] {
-  direction: ltr;
-  text-align: end;
-}
+
 
 .one-line {
   display: flex;
